--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,17 @@
   gap: 40px;
   justify-content: center;
   align-content: center;
+  align-items: end;
 }
 
 .moleHole {
-  background: rgb(89, 89, 89);
-  height: 100%;
-  border-radius: 50%;
+  max-width: 150px;
+  object-fit: contain;
   opacity: 1;
 }
 
 .moleHole.mole {
-  background:rgb(253, 0, 0)
+  background: rgb(253, 0, 0);
 }
 
 .moleInHole {
